Prevent overflow of long words

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -272,6 +272,19 @@ $citationHeight: 68px;
 	margin-block-start: 0.5em;
 	color: $myGrey75;
 	flex-grow: 1;
+	// Prevent overflow of long words
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	-ms-word-break: break-all;
+	/* This is the dangerous one in WebKit, as it breaks things wherever */
+	word-break: break-all;
+	/* Instead use this non-standard one: */
+	word-break: break-word;
+	/* Adds a hyphen where the word breaks, if supported (No Blink) */
+	-ms-hyphens: auto;
+	-moz-hyphens: auto;
+	-webkit-hyphens: auto;
+	hyphens: auto;
 }
 .citationAuthor {
 	font-style: normal;
